# WebSearchAI

./: .gitignore  Cards.py  LLM.py  MLX.py  Main.py  README.md  Settings.py  Test.py  Themes.py  WebSearch.py  changelog  install.bat  install.sh  main.py  pyproject.toml  start.bat  start.sh
.github/workflows/: Build_Binaries.yml
src/: Cards.py  LLM.py  Main.py  Settings.py  Themes.py
